- The Digital Doppelganger quality now allows for Fake SINs as a requirement.
- Added gear as a requirement check.
- Added condition checks to critter power purchases separate to the existing catregory filtering. 
- MetatypeRemovable metagenetic qualities now no longer count towards metagenetic limits. For example, Wakyambi with Surge don't have to remove their Celerity quality.

Data Changes:

- Fixed Autopicker having an incorrect cost. Fixes #3167.
- Fixed an issue with Japanese translations of certain lifestyle qualities caused by duplicate entries. Fixes #3168.
- Added content from the German-exclusive sourcebook "Hamburg".
- Removed redundant 'Enable Spells and Spirits Tab' improvement. Closes #3189
- Added an optional rule from Chrome Flesh to allow Trolls to treat their horns as per the bio-weapon on page 121 of Chrome Flesh. 
- Fixed incorrect requirements for the Special Modifications and Prototype Materials qualities. 
- The Dual Natured critter power now grants access to Astral Combat. Magical Guard now grants access to the Counterspelling skill. RAW implies this is correct, but I'm not super confident in it. Closes #3195
- Added missing critter powers from Dark Terrors, courtesy of Keeper M. 
- Per updated Runnerhub Rules, the Liminal bodies are now available and Armor enhancements can be added to skulls and torsos.

New Strings:

- Checkbox_DiceRoller_VariableGlitch

Build 203

Application Changes:

- Fixed an issue with inability to remove cyberware added to vehicle plugins. Fixes #2918
- Fixed behaviour of custom improvement cxreation not properly connecting to a group.
- Fixed an issue with powers when toggling between rulesets with the option to use a second magic attribute for MysAds. Might be a fix for #2919 and #2917?
- Fixed the Household Gremlins lifestyle quality causing low-price houses to generate money.
- Fixed an issue with inability to remove metamagics or initiate grades in create mode.