@@ -21,6 +21,8 @@ Application Changes:
 - Added gear as a requirement check.
 - Added condition checks to critter power purchases separate to the existing catregory filtering. 
 - MetatypeRemovable metagenetic qualities now no longer count towards metagenetic limits. For example, Wakyambi with Surge don't have to remove their Celerity quality.
+- Fixed an issue with the Select Weapon window causing a crash if receiving incorrectly filtered strings. Fixes #3256
+- Fixed an issue with built-in weapons being incorrectly added to the first weapon mount in a list.
 
 Data Changes:
 
